service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wp
spec:
  type: NodePort
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
    nodePort: 32006
  selector:
    name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wp
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    name: wordpress
